[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Quadro.jpeg" type="Texture" id=1]
[ext_resource path="res://Task_professora.gd" type="Script" id=2]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 11 )

[node name="task_professora" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 74.0
margin_top = 24.0
margin_right = 547.0
margin_bottom = 268.0
theme = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 104.0
margin_top = 41.0
margin_right = 455.0
margin_bottom = 157.0
text = "Quem Pintou o quadro da monalisa ?"

[node name="Label2" type="Label" parent="CanvasLayer/NinePatchRect"]
visible = false
margin_left = 248.0
margin_top = 85.0
margin_right = 288.0
margin_bottom = 105.0
text = "Errado!"

[node name="Label3" type="Label" parent="CanvasLayer/NinePatchRect"]
visible = false
margin_left = 248.0
margin_top = 85.0
margin_right = 288.0
margin_bottom = 105.0
text = "Certo!!"

[node name="Control" type="GridContainer" parent="CanvasLayer/NinePatchRect"]
margin_left = 107.0
margin_top = 87.0
margin_right = 219.0
margin_bottom = 203.0

[node name="Button" type="Button" parent="CanvasLayer/NinePatchRect/Control"]
margin_right = 112.0
margin_bottom = 26.0
text = "Pablo Picasso"

[node name="Certo" type="Button" parent="CanvasLayer/NinePatchRect/Control"]
margin_top = 30.0
margin_right = 112.0
margin_bottom = 56.0
text = "Leonardo Da Vinci"

[node name="Button2" type="Button" parent="CanvasLayer/NinePatchRect/Control"]
margin_top = 60.0
margin_right = 112.0
margin_bottom = 86.0
text = "Vincent Van Gogh"

[node name="Button3" type="Button" parent="CanvasLayer/NinePatchRect/Control"]
margin_top = 90.0
margin_right = 112.0
margin_bottom = 116.0
text = "Michelangelo"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.116401, 0.0848214 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerCerto" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/NinePatchRect/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/NinePatchRect/Control/Certo" to="." method="_on_Certo_pressed"]
[connection signal="pressed" from="CanvasLayer/NinePatchRect/Control/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/NinePatchRect/Control/Button3" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerCerto" to="." method="_on_TimerCerto_timeout"]
